NIFI-16032 Review